--- a/start.html
+++ b/start.html
@@ -3,14 +3,111 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Domek</title>
+    <meta name="viewport" content="width=Dome, initial-scale=1.0">
+    <title>House</title>
     <style>
-    </style>
+        span {
+            position: absolute;
+            top: 40px;
+            left: 10px;
+            background-color: brown;
+            padding: 20px;
+            color: white;
+            font-family: Arial, Helvetica, sans-serif;
+            cursor: pointer;
+        }
 
+        div:nth-of-type(2) {
+            transition: .2s;
+        }
+
+        div:nth-of-type(3) {
+            transition: .4s;
+        }
+
+        div:nth-of-type(4) {
+            transition: .6s;
+        }
+
+        div:nth-of-type(5) {
+            transition: .8s;
+        }
+
+        div:nth-of-type(6) {
+            transition: 1s;
+        }
+
+        div {
+            position: absolute;
+            top: 90%;
+            left: 20%;
+            width: 0;
+            height: 0;
+            background-color: brown;
+        }
+
+        span:hover~div:nth-of-type(1) {
+            top: 50%;
+            left: 50%;
+            width: 50vh;
+            height: 30vh;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+        }
+
+        span:hover~div:nth-of-type(2) {
+            top: calc(50% - 15vh);
+            left: 50%;
+            width: calc(50vh / 1.41);
+            height: calc(50vh / 1.41);
+            transform: translate(-50%, -50%) rotate(45deg);
+            background-color: black;
+        }
+
+        span:hover~div:nth-of-type(3) {
+            top: calc(50% + 7.5vh);
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: gray;
+            width: 12vh;
+            height: 15vh;
+            z-index: 2;
+        }
+
+        span:hover~div:nth-of-type(4) {
+            top: calc(50% - 25vh);
+            left: calc(50% + 15vh);
+            transform: translate(-50%, -50%);
+            background-color: #333;
+            width: 5vh;
+            height: 15vh;
+            z-index: 2;
+        }
+
+        span:hover~div:nth-of-type(5) {
+            top: calc(50%);
+            left: calc(50% + 15vh);
+            transform: translate(-50%, -50%);
+            background-color: yellow;
+            width: 15vh;
+            height: 15vh;
+            z-index: 2;
+        }
+
+        span:hover~div:nth-of-type(6) {
+            top: calc(50%);
+            left: calc(50% - 15vh);
+            transform: translate(-50%, -50%);
+            background-color: yellow;
+            width: 15vh;
+            height: 15vh;
+            z-index: 2;
+        }
+    </style>
 </head>
 
 <body>
-    <span>BUDUJEMY</span>
+    <span>BUILD</span>
     <div></div>
     <div></div>
     <div></div>
